serveur: session STABLE — écho Ping (fin du "Reconnecting...")
LoginServer instrumenté journalise chaque message (client = source de vérité).
Flux relevé : ClientInfo->BootData puis télémétrie + Ping1. Le "Reconnecting..."
venait du Ping (keepalive/latence) non répondu -> chien de garde du client ferme
la connexion. Le serveur échoue désormais Ping (serverReceive/serverTime=now) ->
0 reconnexion, session stable dans le hub (spine+particules d'origine via unidbg).

Reste : BootData complet nouveau joueur -> tuto (IntroTutorialActV1) ; sync des
stats (désaccord contenu 7.9 vs code 12.1.0). Flux documenté dans PROTOCOL.md §6.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01X8YZTb9Pz94YMCoQpe5N13